--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div id="links">
       <a class="link" href="https://lost-fernandes.github.io/lostfernandes.github.io/" target="_blank">
-        <i class="/">&#128221; Gerador de Ensini Fundamental</i>
+        <i class="/">&#128221; Gerador de Ensino Fundamental</i>
       </a>
       <a class="link" href="https://lost-fernandes.github.io/professor.caluclofrequencia.github.io/" target="_blank">
         <i class="/">&#128221; Calculdora de Frequências de Alunos</i>
