--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       Ferramentas burocrática que irá auxiliar no sue dia dia!
 
       
-    </div>
+    </div>--->
 
     <div id="links">
       <a class="link" href="https://lost-fernandes.github.io/lostfernandes.github.io/" target="_blank">
