--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!---<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plataforma do Professor</title>
@@ -49,7 +49,7 @@
       Ferramentas burocrática que irá auxiliar no sue dia dia!
 
       
-    </div>--->
+    </div>
 
     <div id="links">
       <a class="link" href="https://lost-fernandes.github.io/lostfernandes.github.io/" target="_blank">
