--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 
     <div id="hashtag">
       #PascoalF
-    </div>
+    </div> <footer>
+            <p>&copy;Desenvolvido por Dev Pascoal Fernandes</p>
+        </footer>
   </body>
 </html>
