--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 
     <div id="hashtag">
       #PascoalF
-    </div> <footer>
+    </div> 
+      <footer>
             <p>&copy;Desenvolvido por Dev Pascoal Fernandes</p>
         </footer>
   </body>
